cleanup #1; added mocks for pytest; added mocked tests
