# api/controllers/read_controller.py
@@ -1,4 +1,7 @@
+import json
+
 from api.controllers.encoder import ok_200
+from api.controllers.swap import make_swap
 from api.repository.liquidity_pools import LiquidityPools
 from api.repository.token_swaps import TokenSwaps
 from api.schema.liquidity_pool_schema import LiquidityPoolSchema
@@ -40,37 +43,13 @@ def get_token_swaps(event, context):
 def get_swap_rate(event, context):
     """get swap rate
 
-    Get token swap rate defined by in &amp; out symbols and input amount # noqa: E501
+    Get token swap rate defined by in &amp; out symbols and input amount
 
-    :param symbol_in: symbol to convert from
-    :type symbol_in: str
-    :param symbol_out: symbol to convert to
-    :type symbol_out: str
-    :param amount: amount to convert
-    :type amount: Decimal
+    :param event: AWS ApiGateway http event
+    :type event: dict
+    :param context AWS Lambda context
+    :type context: LambdaContext
 
-    :rtype: TokenSwaps
+    :rtype: dict
     """
-    print(event)
-    return ok_200({})
-
-#     # todo handle not found errs
-#     # todo remove DRY with swap method
-#     if symbol_in == xyk.SYMBOL:
-#         key = symbol_out
-#         fn = xyk.native_to_token
-#     else:
-#         key = symbol_in
-#         fn = xyk.token_to_native
-#
-#     lp_in = LiquidityPool.from_dict(db.tablePools.get_item(Key={'symbol': key})['Item'])
-#     new_lp_in, payout = fn(lp_in, amount)
-#
-#     new_lp_out = None
-#     if symbol_in != xyk.SYMBOL and symbol_out != xyk.SYMBOL:
-#         lp_out = LiquidityPool.from_dict(db.tablePools.get_item(Key={'symbol': symbol_out})['Item'])
-#         new_lp_out, payout = xyk.native_to_token(lp_out, payout)
-#
-#     return TokenSwap(symbol_in, symbol_out, amount, payout, datetime.utcnow())
-#
-#
+    return make_swap(event['queryStringParameters'])
