# openapi/openapi.yaml
@@ -9,6 +9,8 @@ info:
     url: http://www.apache.org/licenses/LICENSE-2.0.html
   version: 1.0.0
 servers:
+- url: http://localhost:3000
+  description: localhost
 - url: https://virtserver.swaggerhub.com/vanderian/pyxyk/1.0.0
   description: SwaggerHub API Auto Mocking
 tags:
@@ -22,9 +24,9 @@ paths:
       tags:
       - write
       summary: adds liquidity pools for swap pair
-      description: "Deposit to liqudity pools for native/token pair for\nexisting\
-        \ or new token symbol \n"
-      operationId: add_liquidity
+      description: |
+        Deposit to liquidity native/token pools for existing or new token pair
+      operationId: addLiquidity
       requestBody:
         description: Liquidity pool to add/update
         content:
@@ -40,14 +42,13 @@ paths:
                 $ref: '#/components/schemas/LiquidityPool'
         "400":
           description: bad input parameter
-      x-openapi-router-controller: api.controllers.write_controller
   /liquidity/drain:
     post:
       tags:
       - write
       summary: drain liquidity from swap pair pools
-      description: Drain liqudity pools for native/token pair for existing symbol
-      operationId: drain_liquidity
+      description: Drain liqudity native/token pools for for existing token pair
+      operationId: drainLiquidity
       requestBody:
         description: Liquidity pool to drain
         content:
@@ -65,14 +66,13 @@ paths:
           description: bad input parameter
         "404":
           description: symbol's pool pair not found
-      x-openapi-router-controller: api.controllers.write_controller
   /liquidity/pools:
     get:
       tags:
       - read
       summary: get swap pairs
       description: Get existing swap pairs with pools
-      operationId: get_liquidity
+      operationId: getLiquidity
       responses:
         "200":
           description: liquidity pools
@@ -82,17 +82,15 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/LiquidityPool'
-                x-content-type: application/json
-      x-openapi-router-controller: api.controllers.read_controller
   /swap:
     get:
       tags:
       - read
       summary: get swap rate
       description: Get token swap rate defined by in & out symbols and input amount
-      operationId: get_swap_rate
+      operationId: getSwapRate
       parameters:
-      - name: symbolIn
+      - name: tokenIn
         in: query
         description: symbol to convert from
         required: true
@@ -100,7 +98,8 @@ paths:
         explode: true
         schema:
           type: string
-      - name: symbolOut
+          example: XYK
+      - name: tokenOut
         in: query
         description: symbol to convert to
         required: true
@@ -108,6 +107,7 @@ paths:
         explode: true
         schema:
           type: string
+          example: USD
       - name: amount
         in: query
         description: amount to convert
@@ -116,6 +116,7 @@ paths:
         explode: true
         schema:
           type: number
+          example: 10
       responses:
         "200":
           description: token rate
@@ -127,13 +128,12 @@ paths:
           description: invalid input amount
         "401":
           description: symbol not found
-      x-openapi-router-controller: api.controllers.read_controller
     post:
       tags:
       - write
       summary: swap tokens and update pools
       description: Swap tokens defined by in & out symbols and input amount
-      operationId: swap_tokens
+      operationId: swapTokens
       requestBody:
         description: tokens to swap with amount
         content:
@@ -149,16 +149,15 @@ paths:
                 $ref: '#/components/schemas/TokenSwap'
         "400":
           description: invalid input amount
-        "404":
+        "401":
           description: symbol not found
-      x-openapi-router-controller: api.controllers.write_controller
   /swaps:
     get:
       tags:
       - read
       summary: get token swaps
       description: Get existing token swaps
-      operationId: get_token_swaps
+      operationId: getTokenSwaps
       responses:
         "200":
           description: token swaps
@@ -168,65 +167,59 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/TokenSwap'
-                x-content-type: application/json
-      x-openapi-router-controller: api.controllers.read_controller
 components:
   schemas:
     LiquidityPool:
       required:
-      - amountNative
-      - amountSymbol
-      - symbol
+      - poolNative
+      - poolToken
+      - tokenSymbol
       type: object
       properties:
-        symbol:
+        tokenSymbol:
           type: string
           example: USD
-        amountNative:
+        poolNative:
           minimum: 0
           type: number
           format: float
           example: 100
-        amountSymbol:
+        poolSymbol:
           minimum: 0
           type: number
           format: float
           example: 200
-      example:
-        symbol: USD
-        amountSymbol: 200
-        amountNative: 100
     SwapInput:
       required:
       - amount
-      - symbolIn
-      - symbolOut
+      - tokenIn
+      - tokenOut
       type: object
       properties:
-        symbolIn:
+        tokenIn:
           type: string
           example: USD
-        symbolOut:
+        tokenOut:
           type: string
-          example: EUR
+          example: XYK
         amount:
           minimum: 0
           type: number
           format: float
-          example: 100
+          example: 10
     TokenSwap:
       required:
       - amountIn
       - amountOut
-      - swapDate
-      - symbolIn
-      - symbolOut
+      - createdAt
+      - tokenIn
+      - tokenOut
       type: object
       properties:
-        symbolIn:
+        tokenIn:
           type: string
           example: USD
-        symbolOut:
+        tokenOut:
           type: string
           example: EUR
         amountIn:
@@ -239,14 +232,7 @@ components:
           type: number
           format: float
           example: 100
-        swapDate:
+        createdAt:
           type: string
           format: date-time
           example: 2020-02-27T09:12:33.001Z
-      example:
-        symbolOut: EUR
-        amountIn: 100
-        amountOut: 100
-        swapDate: 2020-02-27T09:12:33.001Z
-        symbolIn: USD
-
